--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,22 @@
 /*  your css code here. If applicable */
+.btn {
+	background-color: #4CAF50; /* Green */
+	border: none;
+	color: white;
+	padding: 15px 32px;
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
+	font-size: 16px;
+	margin: 4px 2px;
+	cursor: pointer;
+}
+
+.stop {
+	background-color: #f44336; /* Red */
+}
+
+#buttons {
+	text-align: center;
+	margin-top: 50px;
+}
