--- a/styles.css
+++ b/styles.css
@@ -1,22 +1,25 @@
 /*  your css code here. If applicable */
-.btn {
-	background-color: #4CAF50; /* Green */
-	border: none;
-	color: white;
-	padding: 15px 32px;
-	text-align: center;
-	text-decoration: none;
-	display: inline-block;
-	font-size: 16px;
-	margin: 4px 2px;
-	cursor: pointer;
-}
-
-.stop {
-	background-color: #f44336; /* Red */
+body{
+	background-color : blueviolet;
+	width : 600px;
+	margin: auto;
 }
 
 #buttons {
-	text-align: center;
-	margin-top: 50px;
+	display: flex;
+	justify-content: center;
+	align-items: center;  
+	height: 100vh
+}
+
+input {
+	font-size: 14px;
+	padding: 10px 20px;
+	margin:  10px;
+	border-radius: 5px;
+	background-color: violet;
+	color: white;
+	border: none;
+	outline: none;
+	cursor: pointer;
 }
